    -Reduced Jevil's ability range. (10 blocks -> 4 blocks).
    -Reduced Skeleton's ability cooldown between modes. (150 -> 100).
    -Health now *properly* scales with size.
        -Small size (14 HP -> 18 HP).
        -Smaller size (14 HP -> 16 HP).
        -Tiny remains at 14 HP.

*Bug Fixes*
    -Fixed bug where Zombie could lose his weapon forever if his grave was down.
    -Fixed bug where Beetlejuice's ability would announce spawn rolls during his ability.
    -Fixed bug where Nick Wilde couldn't sabotage Papyrus.
    -Fixed bug where Bogo could make you permanently lose your weapon in Random Kit on Death.

*Internal Changes*
    -Updated format to "94.1"
    -All tools are now included in the "du-in:weapons" item tag.
    -Added "#minecraft:spears" to the "du-in:weapons" item tag.
    -Added "minecraft:blaze_rod" to the "du-in:secondary" item tag.
    -Updated Gamerules to follow new format.
    -Moved asgore trident functions into the "projectiles" function.
    -Merged the two night ambience check functions from "general" into a new function.
    -Removed "played" tag in service of simply using the "player" score.
    -Submodes are now stored as a score in a fake player and tested, rather than testing tags on all players.
    -Main gamemodes are now tracked via "gamemode" score in "#main", rather than testing tags on all players.
    -Spam clicking submode is now run through fake player score rather than a tag.
    -Easter Egg character music is now run through a fake player score.
    -Armor return system now runs once a second rather than every tick.

*Resourcepack Changes*
    -Updated format to "75.0"
    -Added ||Pawbert Lynxley|| armor texture. (by BellowBomb)
    -Added ||Venom Injector|| textures. (by Realm_Xplorer)
    -Added ||Venom Vial|| texture. (by Realm_Xplorer)
    -Added variated pitches to some sound effects in the sounds.json.
    -Re-added Flowey's christmas weapon texture (accidentally deleted somehow).