@@ -1,5 +1,5 @@
 #Ability#
-item replace entity @s weapon.offhand with minecraft:carrot_on_a_stick[item_name=[{text:"No Loose Ends",color:red,bold:true}],lore=[[{text:"Right click to activate!",color:dark_purple,bold:true}],[{text:"Go invisible and strike",color:dark_gray}],{text:"from the shadows!",color:dark_gray},{text:"(Also sabotages nearby enemies)",color:dark_gray}],enchantment_glint_override=true,item_model="packed_mud"]
+item replace entity @s weapon.offhand with minecraft:carrot_on_a_stick[item_name=[{text:"No Loose Ends",color:red,bold:true}],lore=[[{text:"Right click to activate!",color:dark_purple,bold:true}],[{text:"Go invisible and strike",color:dark_gray}],{text:"from the shadows!",color:dark_gray},{text:"(Also sabotages nearby enemies)",color:dark_gray}],enchantment_glint_override=true,item_model="du-in:abilities/journal"]
 #item replace entity @s weapon.offhand with minecraft:coal[item_name=[{text:"Rock Throw",color:red,bold:true}],lore=[[{text:"Right click to activate!",color:dark_purple,bold:true}],[{text:"Throw a boulder",color:dark_gray}],{text:"for massive damage",color:dark_gray},{text:"",color:dark_gray}],enchantment_glint_override=true,item_model="packed_mud",consumable={consume_seconds:0,animation:"none",sound:"intentionally_empty",has_consume_particles:false}]
 
 #,consumable={consume_seconds:0,animation:"none",sound:"intentionally_empty",has_consume_particles:false}
